[gd_scene load_steps=2 format=3 uid="uid://vj5qlce8ssm1"]

[ext_resource type="Script" path="res://game/units/base_unit/unit_sprite.gd" id="1_x2sfq"]

[node name="UnitSprite" type="Sprite2D"]
script = ExtResource("1_x2sfq")

[node name="ColorSprite" type="Sprite2D" parent="."]

[node name="AnimTimer" type="Timer" parent="."]

[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_anim_timer_timeout"]
